--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
       <fieldset>
         <form action="/sendpacketid" method="post">
           <input name="packetID" type="text" class="ghost-input" placeholder="Enter a packet ID" required>
+          <input name="companyName" type="text" class="ghost-input" placeholder="Enter a company name" required>          
           <input type="submit" class="ghost-button" value="Submit">
         </form>
       </fieldset>
