--- a/views/barcode2.ejs
+++ b/views/barcode2.ejs
@@ -48,5 +48,7 @@ padding: 0px;
 </form>
 <script>
 var suggestions="<%=suggestions%>";
+if("<%=messageToClient%>"!="")
+  alert("DEBUG:\n/getTX for link to etherscan\n/getFromEthereum for getting the data from ethereum as a string");
 </script>
 </body></html>
