New module. Redictect post.

--- a/views/barcode2.ejs
+++ b/views/barcode2.ejs
@@ -41,7 +41,7 @@ padding: 0px;
     <h5><%=messageToClient%></h5>
   </div>
 </div>
-<form action="/add" method="post">
+<form action="/" method="post">
 <input id=packetID name="packetID" type="search">
 <input name="companyName" type="hidden" value="VR">
 <button type="submit">OK</button>
